# Galaxy-Calculator-2

./: .appveyor.yml  .gitignore  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Doxyfile  Galaxy-Calculator-2.pro  GalaxyCalculator2.pro  GalaxyCalculator2.qdocconf  GalaxyCalculator2.qrc  GalaxyCalculator2_resource.rc  GalaxyDataTable.cpp  GalaxyDataTable.h  GalaxySettings.cpp  GalaxySettings.h  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow_8cpp.html  MainWindow_8cpp_source.html  MainWindow_8h_source.html  Makefile  Makefile.Debug  Makefile.Release  MyLocalization_8h_source.html  MyOrgSettings_8cpp.html  MyOrgSettings_8h.html  README.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  (+944 more)
.github/workflows/: main.yml
android/: AndroidManifest.xml
bash/: makeappendix.a.sh
cmake/: windeployqt.cmake
config/: config.xml
desktop/: CMakeLists.txt  GalaxyCalculator2.desktop
doc/html/: MainWindow_8cpp.html  MainWindow_8cpp_source.html  MainWindow_8h.html  MainWindow_8h.js  MainWindow_8h_source.html  MyConstants_8h.html  MyConstants_8h.js  MyConstants_8h_source.html  MyLocalization_8cpp.html  MyLocalization_8cpp_source.html  MyLocalization_8h.html  MyLocalization_8h_source.html  MyOrgSettings_8cpp.html  MyOrgSettings_8cpp_source.html  MyOrgSettings_8h.html  MyOrgSettings_8h_source.html  MySqlDbtModel_8cpp.html  MySqlDbtModel_8cpp_source.html  MySqlDbtModel_8h.html  MySqlDbtModel_8h_source.html  MyTrinaryMath_8cpp.html  MyTrinaryMath_8cpp_source.html  MyTrinaryMath_8h.html  MyTrinaryMath_8h_source.html  SimpleCrypt_8cpp.html  SimpleCrypt_8cpp_source.html  SimpleCrypt_8h.html  SimpleCrypt_8h_source.html  The-example.html  TrinaryMath_8cpp.html  TrinaryMath_8cpp_source.html  TrinaryMath_8h.html  TrinaryMath_8h_source.html  annotated.html  annotated_dup.js  arithmetictype_8hpp.html  arithmetictype_8hpp_source.html  classGalaxyClass-members.html  classGalaxyClass.html  classMainWindow-members.html  (+1692 more)
docker/: install-qt.sh
docs/html/: AboutDialog_8h_source.html  MainWindow_8h_source.html  QAESEncryption_8h_source.html  QLoggerCommon_8h_source.html  QLoggerConstants_8h_source.html  QLoggerCrypto_8h_source.html  QLoggerLevel_8h_source.html  QLoggerManager_8h_source.html  QLoggerWriter_8h_source.html  TreeItem_8h_source.html  TreeModel_8h_source.html  TreeViewDragDropModel_8h_source.html  WeBookMan_8h_source.html  annotated.html  classAboutDialog-members.html  classAboutDialog.html  classMainWindow-members.html  classMainWindow.html  classQAESEncryption-members.html  classQAESEncryption.html  classQLoggerLevel-members.html  classQLoggerLevel.html  classQLogger_1_1QLoggerCommon-members.html  classQLogger_1_1QLoggerCommon.html  classQLogger_1_1QLoggerCrypto-members.html  classQLogger_1_1QLoggerCrypto.html  classQLogger_1_1QLoggerManager-members.html  classQLogger_1_1QLoggerManager.html  classQLogger_1_1QLoggerWriter-members.html  classQLogger_1_1QLoggerWriter.html  classTreeItem-members.html  classTreeItem.html  classTreeModel-members.html  classTreeModel.html  classTreeViewDragDropModel-members.html  classTreeViewDragDropModel.html  classWeBookMan-members.html  classWeBookMan.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+39 more)
docs/latex/: annotated.tex  classAboutDialog.tex  classMainWindow.tex  classQAESEncryption.eps  classQAESEncryption.tex  classQLoggerLevel.tex  classQLogger_1_1QLoggerCommon.eps  classQLogger_1_1QLoggerCommon.tex  classQLogger_1_1QLoggerCrypto.eps  classQLogger_1_1QLoggerCrypto.tex  index.tex  (+19 more)
help/: About-Author_ar.md  About-Author_de.md  About-Author_es.md  About-Author_fr.md  About-Author_it.md  About-Author_ja.md  About-Author_no.md  About-Author_ru.md  About-Author_sv.md  About-Author_zh_CN.md  About_ar.md  About_de.md  About_es.md  About_fr.md  About_it.md  About_ja.md  About_no.md  About_ru.md  About_sv.md  About_zh-CN.md  Help-en.html  Help_ar.md  Help_de.md  Help_es.md  Help_fr.md  Help_it.md  Help_ja.md  Help_no.md  Help_ru.md  Help_sv.md  Help_zh_CN.md
ios/: Info.plist
macos/: Info.plist
resources/: CMakeLists.txt  Galaxy-Calculator-2.desktop
scripts/: build-script.cmd  build-script.sh  build_script.cmd  build_script.ps1  build_script.sh  build_script_mac.sh  install.cmd  install.ps1  install.sh  install_mac.sh  testPS.ps1  upload.sh
search/: all_11.js  all_12.js  all_13.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_10.js  classes_15.js  classes_17.js  classes_4.js  classes_6.js  classes_c.js  classes_e.js  classes_f.js  defines_3.js  defines_5.js  defines_8.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  defines_e.js  enums_0.js  enums_1.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_9.js  enums_a.js  enumvalues_0.js  (+59 more)
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MyConstants.h  MyLocalization.cpp  MyLocalization.h  MyOrgSettings.cpp  MyOrgSettings.h  MySqlDbtModel.cpp  MySqlDbtModel.h  MyTrinaryMath.cpp  MyTrinaryMath.h  SimpleCrypt.cpp  SimpleCrypt.h  TrinaryMath.cpp  TrinaryMath.h  main.cpp
tools/: build-with-qmake.sh
translations/: GalaxyCalculator2_ar.qm  GalaxyCalculator2_ar.ts  GalaxyCalculator2_ar_AR.ts  GalaxyCalculator2_de.qm  GalaxyCalculator2_de.ts  GalaxyCalculator2_de_DE.ts  GalaxyCalculator2_en.qm  GalaxyCalculator2_en.ts  GalaxyCalculator2_en_US.ts  GalaxyCalculator2_es.qm  GalaxyCalculator2_es.ts  GalaxyCalculator2_es_ES.ts  GalaxyCalculator2_fr.qm  GalaxyCalculator2_fr.ts  GalaxyCalculator2_fr_FR.ts  GalaxyCalculator2_it.qm  GalaxyCalculator2_it.ts  GalaxyCalculator2_it_IT.ts  GalaxyCalculator2_ja.qm  GalaxyCalculator2_ja.ts  GalaxyCalculator2_ja_JA.ts  GalaxyCalculator2_no.qm  GalaxyCalculator2_no.ts  GalaxyCalculator2_no_NO.ts  GalaxyCalculator2_ru.qm  GalaxyCalculator2_ru.ts  GalaxyCalculator2_ru_RU.ts  GalaxyCalculator2_sv.qm  GalaxyCalculator2_sv.ts  GalaxyCalculator2_sv_SV.ts  GalaxyCalculator2_zh-CN.ts  GalaxyCalculator2_zh_CN.qm  GalaxyCalculator2_zh_CN.ts
(+285 files in other folders)
